added --release 8 flag to java run.sh | fixed toList() not existing in java 8 switched to .collect()